added landing page, promises

--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -1,5 +1,7 @@
 <h1>Weather api data</h1>
-<button (click)="getLocation()">get location</button>
-<div>{{lat}},{{long}}</div>
-<button (click)="update()">adsf
+<button (click)="getURL()">get location</button>
+<br/>
+<button (click)="getInitialJson()">adsf
+
 </button>
+
