--- a/src/app/location/location.component.html
+++ b/src/app/location/location.component.html
@@ -1,7 +1,3 @@
 <h1>Weather api data</h1>
-<button (click)="getURL()">get location</button>
-<br/>
-<button (click)="getInitialJson()">adsf
-
-</button>
+<button (click)="service()">get location</button>
 
