added today page, c/f, bar

--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -10,7 +10,7 @@
         if you're interested, otherwise
         <br/>
         <button id="proceed" class="btn btn-primary btn-lg" (click)="getJSON()"
-                [routerLink]="homeLinkEnabled ? '/home' : null">Proceed</button>
+                [routerLink]="homeLinkEnabled ? '/today' : null">Proceed</button>
         <br/>
         <div id="subtitle">You will need to enable your location</div>
     </div>
