--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light navbar-background">
-  <a class="navbar-brand ml-5" routerLink="/home" routerLinkActive="active">Home</a>
+  <a class="navbar-brand ml-5" routerLink="/today" routerLinkActive="active">Today</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
