--- a/src/app/weather-card-today/weather-card-today.component.css
+++ b/src/app/weather-card-today/weather-card-today.component.css
@@ -20,7 +20,8 @@
   height: 100%;
   position: absolute;
   border-radius: 15px;
-  background: url(https://www.xmple.com/wallpaper/grey-blue-gradient-linear-1920x1080-c2-808080-4682b4-a-45-f-14.svg);
+  background: rgba(0, 0, 0, 0.4);
+  backdrop-filter: blur(5px);
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -69,6 +70,7 @@ form {
 #date {
   text-align: right;
   color: white;
+  white-space: nowrap;
 }
 .progress {
   height: 10px;
@@ -174,10 +176,30 @@ form {
   margin-top: -44px;
   border-radius: 1px;
 }
+.twelveAM-2 {
+  margin-top: 20px;
+  margin-left: 95.5%;
+  font-size: 12px;
+  color: antiquewhite;
+}
+#twelveAM-bar-2 {
+  margin-left: 99.7%;
+  border-left: 2px solid darkgray;
+  height: 10px;
+  margin-top: -44px;
+  border-radius: 1px;
+}
 .weather-img {
   position: absolute;
   margin-left: 70%;
   margin-top: 1%;
   border-radius: 30px;
   background: lightcyan;
+}
+.weather-img-night {
+  position: absolute;
+  margin-left: 70%;
+  margin-top: 2%;
+  border-radius: 30px;
+  background: darkslateblue;
 }
