--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,7 +1,7 @@
 <section class="home">
   <div class="container">
     <div class="text">
-      Welcome to my Weather App!
+      Welcome to Pixel Weather!
         <br/>
         Here is the
         <u>
