--- a/src/app/weather-card-today/weather-card-today.component.css
+++ b/src/app/weather-card-today/weather-card-today.component.css
@@ -4,8 +4,26 @@
 .pixel-font{
   font-family: PixelarRegularW01-Regular;
 }
-.bg {
+.bg-rain {
   background: url(https://thumbs.gfycat.com/QueasyRecentEmperorshrimp-size_restricted.gif);
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+}
+.bg-sun {
+  background: url(https://i.redd.it/0gjs15p02jp51.png);
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+}
+.bg-snow {
+  background: url(https://i.redd.it/ii6ml342b1541.gif);
+  width: 100%;
+  height: 100vh;
+  background-size: cover;
+}
+.bg-missing {
+  background: darkcyan;
   width: 100%;
   height: 100vh;
   background-size: cover;
@@ -213,6 +231,7 @@ form {
   overflow: auto;
   white-space: nowrap;
   color: antiquewhite;
+  overflow-y: hidden;
 }
 ::-webkit-scrollbar {
   width: 18px;
