--- a/src/app/weather-card-today/weather-card-today.component.html
+++ b/src/app/weather-card-today/weather-card-today.component.html
@@ -1,8 +1,15 @@
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script src="//geodata.solutions/includes/statecity.js"></script>
 <div *ngIf="jsonReaderService.weatherJSON">
   <section [ngClass]="{'bg-rain': isRain, 'bg-sun': isSun, 'bg-snow': isSnow, 'bg-missing': missing}">
     <div class="card-container">
       <div class="card pixel-font">
         <div class="text-container">
+          <form (submit)="getCityName(city.value)" onsubmit="return false">
+            <label id="search-label">Search: </label>
+            <input type="text" #city placeholder="city name">
+            <label id="error-label" *ngIf="jsonReaderService.cityOutOfBounds">Please search a city inside the US</label>
+          </form>
           <div class="location">{{jsonReaderService.weatherJSON.properties.relativeLocation.properties.city}},
             {{jsonReaderService.weatherJSON.properties.relativeLocation.properties.state}}</div>
           <span class="temperature" *ngIf="jsonReaderService.hourlyJSON">
@@ -12,8 +19,8 @@
         <span class="long-forecast" [innerHTML]="highLow | nl2br"></span>
         <img *ngIf="(isSun || icon=='Clear' || icon=='Haze' || icon=='Mostly Clear') && isDayTime" class="weather-img" src="../../assets/sunny.png">
         <img *ngIf="(isSun || icon=='Clear' || icon=='Haze' || icon=='Mostly Clear') && !isDayTime" class="weather-img-night" src="../../assets/nightsunny.png">
-        <img *ngIf="(icon=='Mostly Cloudy' || icon=='Cloudy' || icon=='Increasing Clouds' || icon=='Decreasing Clouds' || icon=='Clearing' || icon=='Gradual Clearing' || icon=='Clearing Late' || icon=='Becoming Cloudy') && isDayTime" class="weather-img" src="../../assets/sunwithclouds.png">
-        <img *ngIf="(icon=='Decreasing Clouds' || icon=='Clearing' || icon=='Gradual Clearing' || icon=='Clearing Late' || icon=='Becoming Cloudy') && !isDayTime" class="weather-img-night" src="../../assets/nightwithclouds.png">
+        <img *ngIf="(icon=='Partly Cloudy' || icon=='Mostly Cloudy' || icon=='Cloudy' || icon=='Increasing Clouds' || icon=='Decreasing Clouds' || icon=='Clearing' || icon=='Gradual Clearing' || icon=='Clearing Late' || icon=='Becoming Cloudy') && isDayTime" class="weather-img" src="../../assets/sunwithclouds.png">
+        <img *ngIf="(icon=='Partly Cloudy' || icon=='Decreasing Clouds' || icon=='Clearing' || icon=='Gradual Clearing' || icon=='Clearing Late' || icon=='Becoming Cloudy') && !isDayTime" class="weather-img-night" src="../../assets/nightwithclouds.png">
         <img *ngIf="(icon=='Mostly Cloudy' || icon=='Cloudy' || icon=='Increasing Clouds') && isDayTime" class="weather-img" src="../../assets/cloudy.png">
         <img *ngIf="(icon=='Mostly Cloudy' || icon=='Cloudy' || icon=='Increasing Clouds') && !isDayTime" class="weather-img-night" src="../../assets/cloudy.png">
         <img *ngIf="isRain && !isSnow && isDayTime" class="weather-img" src="../../assets/rain.png">
@@ -22,8 +29,8 @@
         <img *ngIf="(isSnow || icon=='Slight Chance Flurries' || icon=='Chance Flurries' || icon=='Flurries Likely' || icon=='Flurries' || icon=='Blizzard') && !isDayTime" class="weather-img-night" src="../../assets/snow.png">
         <img *ngIf="isRain && isSnow && isDayTime" class="weather-img" src="../../assets/rainsnow.png">
         <img *ngIf="isRain && isSnow && !isDayTime" class="weather-img-night" src="../../assets/rainsnow.png">
-        <img *ngIf="(icon=='Isolated Thunderstorms' || icon=='Slight Chance Thunderstorms' || icon=='Chance Thunderstorms' || icon=='Thunderstorms Likely' || icon=='Thunderstorms' || icon=='Severe Tstms') && isDayTime" class="weather-img" src="../../assets/thunderday.png">
-        <img *ngIf="(icon=='Isolated Thunderstorms' || icon=='Slight Chance Thunderstorms' || icon=='Chance Thunderstorms' || icon=='Thunderstorms Likely' || icon=='Thunderstorms' || icon=='Severe Tstms') && !isDayTime" class="weather-img-night" src="../../assets/thundernight.png">
+        <img *ngIf="jsonReaderService.hourlyJSON.properties.periods[0].shortForecast.toLowerCase().includes('thunderstorms') && isDayTime" class="weather-img" src="../../assets/thunderday.png">
+        <img *ngIf="jsonReaderService.hourlyJSON.properties.periods[0].shortForecast.toLowerCase().includes('thunderstorms') && !isDayTime" class="weather-img-night" src="../../assets/thundernight.png">
 
         <div class="progress-wrapper">
           <div class="progress">
@@ -57,8 +64,8 @@
               <div class="hour-temp">{{hour.temperature}} °F</div>
               <img *ngIf="(hour.shortForecast=='Clear' || hour.shortForecast=='Haze' || hour.shortForecast=='Sunny' || hour.shortForecast=='Mostly Sunny' || hour.shortForecast=='Mostly Clear') && hour.isDaytime" class="weather-img-small" src="../../assets/sunny.png">
               <img *ngIf="(hour.shortForecast=='Clear' || hour.shortForecast=='Haze' || hour.shortForecast=='Sunny' || hour.shortForecast=='Mostly Sunny' || hour.shortForecast=='Mostly Clear') && !hour.isDaytime" class="weather-img-small-night" src="../../assets/nightsunny.png">
-              <img *ngIf="(hour.shortForecast=='Partly Sunny' || hour.shortForecast=='Mostly Cloudy' || hour.shortForecast=='Cloudy' || hour.shortForecast=='Increasing Clouds' || hour.shortForecast=='Decreasing Clouds' || hour.shortForecast=='Clearing' || hour.shortForecast=='Gradual Clearing' || hour.shortForecast=='Clearing Late' || hour.shortForecast=='Becoming Cloudy') && hour.isDaytime" class="weather-img-small" src="../../assets/sunwithclouds.png">
-              <img *ngIf="(hour.shortForecast=='Partly Sunny' ||  hour.shortForecast=='Decreasing Clouds' || hour.shortForecast=='Clearing' || hour.shortForecast=='Gradual Clearing' || hour.shortForecast=='Clearing Late' || hour.shortForecast=='Becoming Cloudy') && !hour.isDaytime" class="weather-img-small-night" src="../../assets/nightwithclouds.png">
+              <img *ngIf="(hour.shortForecast=='Partly Cloudy' || hour.shortForecast=='Partly Sunny' || hour.shortForecast=='Mostly Cloudy' || hour.shortForecast=='Cloudy' || hour.shortForecast=='Increasing Clouds' || hour.shortForecast=='Decreasing Clouds' || hour.shortForecast=='Clearing' || hour.shortForecast=='Gradual Clearing' || hour.shortForecast=='Clearing Late' || hour.shortForecast=='Becoming Cloudy') && hour.isDaytime" class="weather-img-small" src="../../assets/sunwithclouds.png">
+              <img *ngIf="(hour.shortForecast=='Partly Cloudy' || hour.shortForecast=='Partly Sunny' ||  hour.shortForecast=='Decreasing Clouds' || hour.shortForecast=='Clearing' || hour.shortForecast=='Gradual Clearing' || hour.shortForecast=='Clearing Late' || hour.shortForecast=='Becoming Cloudy') && !hour.isDaytime" class="weather-img-small-night" src="../../assets/nightwithclouds.png">
               <img *ngIf="(hour.shortForecast=='Mostly Cloudy' ||  hour.shortForecast=='Cloudy' || hour.shortForecast=='Increasing Clouds') && hour.isDaytime" class="weather-img-small" src="../../assets/cloudy.png">
               <img *ngIf="(hour.shortForecast=='Mostly Cloudy' || hour.shortForecast=='Cloudy' || hour.shortForecast=='Increasing Clouds') && !hour.isDaytime" class="weather-img-small-night" src="../../assets/cloudy.png">
               <img *ngIf="hour.shortForecast.toLowerCase().includes('rain') && !hour.shortForecast.toLowerCase().includes('snow') && hour.isDaytime" class="weather-img-small" src="../../assets/rain.png">
