--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -5,7 +5,7 @@
         <a class="nav-link pixel-font" href="#">Analytics</a>
       </li>
       <li class="nav-item ml-5">
-        <a class="nav-link pixel-font" href="#">Pricing</a>
+        <a class="nav-link pixel-font" routerLink="/subscribe" routerLinkActive="active">Subscribe</a>
       </li>
     </ul>
 </nav>
