added user registration

--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -1,1 +1,34 @@
-<p>register works!</p>
+<div class="bg-image">
+  <div class="container">
+    <section>
+      <form [formGroup]="registerForm" (ngSubmit)="register()">
+        <span class="header">Create an account or
+          <span class="login" routerLinkActive="active" routerLink="/login">login</span>
+        </span>
+        <div class="form-group">
+          <input matInput placeholder="username" type="text" formControlName="username">
+          <span *ngIf="registerForm.controls.username.errors">
+            <div class="errors" *ngIf="submitted && registerForm.controls.username.errors.required">Username is required</div>
+            <div class="errors" *ngIf="submitted && registerForm.controls.username.errors.minlength">Username must be longer than 6 characters</div>
+            <div class="errors" *ngIf="submitted && registerForm.controls.username.errors.maxlength">Username must be shorter than 16 characters</div>
+            <div class="errors" *ngIf="submitted && registerForm.controls.username.errors.pattern">Username may only contain . and _</div>
+          </span>
+        </div>
+        <div class="form-group">
+          <input matInput placeholder="password" type="text" formControlName="password">
+          <span *ngIf="registerForm.controls.password.errors">
+          <div class="errors" *ngIf="submitted && registerForm.controls.password.errors.required">Password is required</div>
+          <div class="errors" *ngIf="submitted && registerForm.controls.password.errors.minlength">Password must be longer than 6 characters</div>
+          </span>
+        </div>
+        <div class="form-group">
+        <input matInput placeholder="email (optional)" type="text" formControlName="email">
+          <span *ngIf="submitted && registerForm.controls.email.errors">
+            <div class="errors">Invalid Email</div>
+          </span>
+        </div>
+        <button id="submit" class="btn btn-primary" type="submit" [disabled]="!registerForm.invalid">Submit</button>
+      </form>
+    </section>
+  </div>
+</div>
