--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -7,5 +7,8 @@
       <li class="nav-item ml-5">
         <a class="nav-link pixel-font" routerLink="/subscribe" routerLinkActive="active">Subscribe</a>
       </li>
+      <li class="nav-item ml-5">
+        <a class="nav-link pixel-font" routerLink="/register" routerLinkActive="active">Register</a>
+      </li>
     </ul>
 </nav>
