--- a/client/src/app/login/login.component.html
+++ b/client/src/app/login/login.component.html
@@ -1,1 +1,24 @@
-<p>login works!</p>
+<div class="bg-image">
+  <div class="container">
+    <section>
+      <form [formGroup]="loginForm" (ngSubmit)="login()">
+        <span class="header">Login or
+          <span class="login" routerLinkActive="active" routerLink="/register"><u>register an account</u></span>
+        </span>
+        <div class="form-group">
+          <input matInput placeholder="username" type="text" formControlName="username">
+          <span *ngIf="loginForm.controls.username.errors">
+            <div class="errors" *ngIf="submitted && loginForm.controls.username.errors.required">Username is required</div>
+          </span>
+        </div>
+        <div class="form-group">
+          <input matInput placeholder="password" style="-webkit-text-security: square" type="text" formControlName="password">
+          <span *ngIf="loginForm.controls.password.errors">
+            <div class="errors" *ngIf="submitted && loginForm.controls.password.errors.required">Password is required</div>
+          </span>
+        </div>
+        <button id="submit" class="btn btn-primary" type="submit">Submit</button>
+      </form>
+    </section>
+  </div>
+</div>
