--- a/client/src/app/navbar/navbar.component.html
+++ b/client/src/app/navbar/navbar.component.html
@@ -1,14 +1,9 @@
 <nav class="navbar navbar-expand-lg navbar-background">
-  <a class="navbar-brand ml-5 pixel-font" routerLink="/today" routerLinkActive="active">Today</a>
-    <ul class="navbar-nav">
-      <li class="nav-item ml-5">
-        <a class="nav-link pixel-font" href="#">Analytics</a>
-      </li>
-      <li class="nav-item ml-5">
-        <a class="nav-link pixel-font" routerLink="/subscribe" routerLinkActive="active">Subscribe</a>
-      </li>
-      <li class="nav-item ml-5">
-        <a class="nav-link pixel-font" routerLink="/register" routerLinkActive="active">Register</a>
-      </li>
-    </ul>
+  <a class="nav-link ml-5 pixel-font" routerLink="/home" routerLinkActive="active">Home</a>
+  <a class="nav-link ml-5 pixel-font" routerLink="/today" routerLinkActive="active">Today</a>
+  <a class="nav-link pixel-font ml-5" href="#">Analytics</a>
+  <a class="nav-link pixel-font ml-5" routerLink="/subscribe" routerLinkActive="active">Subscribe</a>
+  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-5" routerLink="/register" routerLinkActive="active">Register</a>
+  <a *ngIf="!isLoggedIn()" class="nav-link pixel-font ml-5" routerLink="/login" routerLinkActive="active">Login</a>
+  <a *ngIf="isLoggedIn()" class="nav-link pixel-font ml-5" (click)="logout()">Sign Out</a>
 </nav>
