--- a/client/src/app/register/register.component.html
+++ b/client/src/app/register/register.component.html
@@ -3,7 +3,7 @@
     <section>
       <form [formGroup]="registerForm" (ngSubmit)="register()">
         <span class="header">Create an account or
-          <span class="login" routerLinkActive="active" routerLink="/login">login</span>
+          <span class="login" routerLinkActive="active" routerLink="/login"><u>login</u></span>
         </span>
         <div class="form-group">
           <input matInput placeholder="username" type="text" formControlName="username">
@@ -13,9 +13,10 @@
             <div class="errors" *ngIf="submitted && registerForm.controls.username.errors.maxlength">Username must be shorter than 16 characters</div>
             <div class="errors" *ngIf="submitted && registerForm.controls.username.errors.pattern">Username may only contain . and _</div>
           </span>
+          <div class="errors" *ngIf="usernameTaken">Username is already in use</div>
         </div>
         <div class="form-group">
-          <input matInput placeholder="password" type="text" formControlName="password">
+          <input matInput placeholder="password" style="-webkit-text-security: square" type="text" formControlName="password">
           <span *ngIf="registerForm.controls.password.errors">
           <div class="errors" *ngIf="submitted && registerForm.controls.password.errors.required">Password is required</div>
           <div class="errors" *ngIf="submitted && registerForm.controls.password.errors.minlength">Password must be longer than 6 characters</div>
@@ -27,7 +28,7 @@
             <div class="errors">Invalid Email</div>
           </span>
         </div>
-        <button id="submit" class="btn btn-primary" type="submit" [disabled]="!registerForm.invalid">Submit</button>
+        <button id="submit" class="btn btn-primary" type="submit">Submit</button>
       </form>
     </section>
   </div>
